--- a/style_me.html
+++ b/style_me.html
@@ -4,6 +4,7 @@
 <html>
   <head>
 		<link rel="stylesheet" style="text/css" href="style.css">
+		<link rel="stylesheet" style="text/css" href="list.css">
     <title>foo title</title>
   </head>
 
