--- a/better.html
+++ b/better.html
@@ -35,39 +35,39 @@
         <li>Oh, a *sarcasm* detector. Oh, that's a *really* useful invention!</li>
         <li>Dear Mr. President, There are too many states nowadays. Please, eliminate three. P.S. I am not a crackpot.</li>
     </ul>
-    <img src="http://i3.kym-cdn.com/photos/images/newsfeed/001/121/219/65c.gif">
+    <div id="rotate"><center><img src="http://i3.kym-cdn.com/photos/images/newsfeed/001/121/219/65c.gif"></center></div>
     <div class="animate">
-    <p>I've had it with this school, Skinner. Low test scores, class after class of ugly, ugly children… Here's to alcohol,
-        the cause of — and solution to — all life's problems. Ahoy hoy? Oh, loneliness and cheeseburgers are a dangerous
-        mix.
-    </p>
-    <p>How could you?! Haven't you learned anything from that guy who gives those sermons at church? Captain Whatshisname? We
-        live in a society of laws! Why do you think I took you to all those Police Academy movies? For fun? Well, I didn't
-        hear anybody laughing, did you? Except at that guy who made sound effects. Makes sound effects and laughs. Where
-        was I? Oh yeah! Stay out of my booze. Yes! I am a citizen! Now which way to the welfare office? I'm kidding, I'm
-        kidding. I work, I work.</p>
-    <p>Ahoy hoy? I'll be back. You can't keep the Democrats out of the White House forever, and when they get in, I'm back on
-        the streets, with all my criminal buddies. Fire can be our friend; whether it's toasting marshmallows or raining
-        down on Charlie.</p>
-    <p>I hope this has taught you kids a lesson: kids never learn. I'll keep it short and sweet — Family. Religion. Friendship.
-        These are the three demons you must slay if you wish to succeed in business.</p>
-    <p>Hi. I'm Troy McClure. You may remember me from such self-help tapes as "Smoke Yourself Thin" and "Get Some Confidence,
-        Stupid!" A woman is a lot like a refrigerator. Six feet tall, 300 pounds…it makes ice.</p>
-    <p>You know, the one with all the well meaning rules that don't work out in real life, uh, Christianity. Aaah! Natural light!
-        Get it off me! Get it off me! What good is money if it can't inspire terror in your fellow man?</p>
-    <p>I don't like being outdoors, Smithers. For one thing, there's too many fat children. Can't you people take the law into
-        your own hands? I mean, we can't be policing the entire city! What good is money if it can't inspire terror in your
-        fellow man?</p>
-    <p>And now, in the spirit of the season: start shopping. And for every dollar of Krusty merchandise you buy, I will be nice
-        to a sick kid. For legal purposes, sick kids may include hookers with a cold. Look out, Itchy! He's Irish!</p>
-    <p>Don't kid yourself, Jimmy. If a cow ever got the chance, he'd eat you and everyone you care about! Attempted murder?
-        Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry? Fat Tony is a cancer on this fair
-        city! He is the cancer and I am the…uh…what cures cancer?</p>
-    <p>D'oh. Inflammable means flammable? What a country. Your questions have become more redundant and annoying than the last
-        three "Highlander" movies. A woman is a lot like a refrigerator. Six feet tall, 300 pounds…it makes ice.</p>
-    <p>Slow down, Bart! My legs don't know how to be as long as yours. We started out like Romeo and Juliet, but it ended up
-        in tragedy. I've had it with this school, Skinner. Low test scores, class after class of ugly, ugly children…</p>
-        </div>
+        <p>I've had it with this school, Skinner. Low test scores, class after class of ugly, ugly children… Here's to alcohol,
+            the cause of — and solution to — all life's problems. Ahoy hoy? Oh, loneliness and cheeseburgers are a dangerous
+            mix.
+        </p>
+        <p>How could you?! Haven't you learned anything from that guy who gives those sermons at church? Captain Whatshisname?
+            We live in a society of laws! Why do you think I took you to all those Police Academy movies? For fun? Well,
+            I didn't hear anybody laughing, did you? Except at that guy who made sound effects. Makes sound effects and laughs.
+            Where was I? Oh yeah! Stay out of my booze. Yes! I am a citizen! Now which way to the welfare office? I'm kidding,
+            I'm kidding. I work, I work.</p>
+        <p>Ahoy hoy? I'll be back. You can't keep the Democrats out of the White House forever, and when they get in, I'm back
+            on the streets, with all my criminal buddies. Fire can be our friend; whether it's toasting marshmallows or raining
+            down on Charlie.</p>
+        <p>I hope this has taught you kids a lesson: kids never learn. I'll keep it short and sweet — Family. Religion. Friendship.
+            These are the three demons you must slay if you wish to succeed in business.</p>
+        <p>Hi. I'm Troy McClure. You may remember me from such self-help tapes as "Smoke Yourself Thin" and "Get Some Confidence,
+            Stupid!" A woman is a lot like a refrigerator. Six feet tall, 300 pounds…it makes ice.</p>
+        <p>You know, the one with all the well meaning rules that don't work out in real life, uh, Christianity. Aaah! Natural
+            light! Get it off me! Get it off me! What good is money if it can't inspire terror in your fellow man?</p>
+        <p>I don't like being outdoors, Smithers. For one thing, there's too many fat children. Can't you people take the law
+            into your own hands? I mean, we can't be policing the entire city! What good is money if it can't inspire terror
+            in your fellow man?</p>
+        <p>And now, in the spirit of the season: start shopping. And for every dollar of Krusty merchandise you buy, I will
+            be nice to a sick kid. For legal purposes, sick kids may include hookers with a cold. Look out, Itchy! He's Irish!</p>
+        <p>Don't kid yourself, Jimmy. If a cow ever got the chance, he'd eat you and everyone you care about! Attempted murder?
+            Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry? Fat Tony is a cancer on this
+            fair city! He is the cancer and I am the…uh…what cures cancer?</p>
+        <p>D'oh. Inflammable means flammable? What a country. Your questions have become more redundant and annoying than the
+            last three "Highlander" movies. A woman is a lot like a refrigerator. Six feet tall, 300 pounds…it makes ice.</p>
+        <p>Slow down, Bart! My legs don't know how to be as long as yours. We started out like Romeo and Juliet, but it ended
+            up in tragedy. I've had it with this school, Skinner. Low test scores, class after class of ugly, ugly children…</p>
+    </div>
 </body>
 
 </html>
